iac/gcp/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: elb-service
spec:
  selector:
    opentelemetry.io/name: opentelemetry-demo-frontendproxy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: otel-demo
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: elb-service
                port:
                  number: 80
